# cs50x

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE.md  README.md
src/: CMakeLists.txt
src/lecture1/: 14_cat.c  15_mario.c  16_overflow.c  17_precision.c
src/lecture2/: 20_compiler.c  21_scores.c  24_string-length.c
src/lecture3/: 32_iteration.c  CMakeLists.txt
src/lecture4/: 40_addresses.c  44_swap.c  46_file-io.c  CMakeLists.txt
src/lecture5/: 51_stack.c  54_linked-list.c  CMakeLists.txt
src/week0/: 00_hello.sb3  hello1.sb3  meow.sb3
src/week1/: 10_hello.c  11_hello-you.c  12_compare.c  13_agree.c  14_cat.c  15_mario.c  16_overflow.c  17_precision.c  CMakeLists.txt  agree.c  agree2.c  calculator0.c  calculator1.c  calculator3.c  calculator4.c  calculator5.c  calculator7.c  cat.c  cat15.c  compare.c  compare0.c  compare4.c  hello.c  hello0.c  hello1.c  hello2.c  mario.c
src/week2/: 20_compiler.c  21_scores.c  22_array-dynamic.c  22_array-multi.c  22_array.c  23_string.c  24_string-length.c  24_string-strlen.c  25_uppercase.c  26_greet.c  CMakeLists.txt  buggy.c  greet.c  hello2.c  meow.c  scores.c  status.c  string.c  strings.c
src/week3/: 30_binary-search.c  30_linear-search.c  30_search.c  31_phone-book.c  33_recursion.c  CMakeLists.txt  iteration.c  phone-book0.c  phone-book1.c  phone_book0.c  recursion.c  search.c  search0.c  search1.c
src/week4/: 41_compare-memory.c  42_copy.c  43_copy-memory.c  45_scan.c  46_file-io.c  CMakeLists.txt  addresses0.c  addresses1.c  addresses2.c  addresses3.c  addresses4.c  compare1.c  compare2.c  compare3.c  copy.c  get_int.c  memory.c  phone_book1.c  swap.c
src/week5/: 50_queue.c  52_resize-manual.c  53_resize-memory.c  55_hash-table.c  CMakeLists.txt  linked_list.c  (+3 more)
(+11 files in other folders)
