add_executable(dynamic_array dynamic_array.c)

add_executable(greet greet.c)

add_executable(meow meow.c)

add_executable(multidimensional_array multidimensional_array.c)

add_executable(scores scores.c)

add_executable(static_array static_array.c)

add_executable(status status.c)

add_executable(string string.c)