add_executable(array 22_array.c)

add_executable(array-dynamic 22_array-dynamic.c)

add_executable(array-multi 22_array-multi.c)

add_executable(compiler 20_compiler.c)

add_executable(greet 26_greet.c)

add_executable(scores 21_scores.c)

add_executable(string 23_string.c)

add_executable(string-length 24_string-length.c)

add_executable(string-strlen 24_string-strlen.c)

add_executable(uppercase 25_uppercase.c)