add_executable(addresses0 addresses0.c)

add_executable(addresses1 addresses1.c)

add_executable(addresses2 addresses2.c)

add_executable(addresses3 addresses3.c)

add_executable(addresses4 addresses4.c)

add_executable(compare1 compare1.c)

add_executable(compare2 compare2.c)

add_executable(compare3 compare3.c)

add_executable(copy copy.c)

add_executable(get_int get_int.c)

add_executable(memory memory.c)

add_executable(phone_book1 phone_book1.c)

add_executable(swap swap.c)